<resources>
    <string name="app_name">Lab06_Tapp</string>
    <string name="aceptar">Aceptar</string>
    <string name="nueva_cuenta">Crear una nueva cuenta</string>
    <string name="cuenta">Ya tengo cuenta</string>
    <string name="facebook">Iniciar sesión con Facebook</string>
    <string name="correo">Iniciar sesión con correo</string>
    <string name="correo_registro">Correo electrónico</string>
    <string name="ingresar">Ingresar</string>
    <string name="yaTapp">Ya tenés cuenta en Tapp?</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="metodos">Mis métodos de pago</string>
    <string name="tapp">Tapp</string>
    <string name="correo_f">Correo</string>

    <string name="configu">Configuración</string>

    <string name="selec_pais">Seleccioná tu país</string>
    <string name="elegi">Elegí la zona en la que estás</string>

    <string name="editar">Editar mi cuenta</string>
    <string name="pais">Cambiar país</string>
    <string name="terminos">Ver nuestros términos</string>

    <string-array name="generos">
        <item>Género</item>
        <item>Hombre</item>
        <item>Mujers</item>
        <item>Otro</item>
    </string-array>

    <string-array name="paises">
        <item>Costa Rica</item>
        <item>México</item>
    </string-array>

    <string name="dinero_canjeable">Dinero canjeable</string>
    <string name="cupones">Cupones</string>
    <string name="cupones_disponibles">Cupones disponibles</string>

    <string name="colones">0 Colones</string>
    <string name="dinero">Dinero que puedes usar en tu próxima compra en cualquiera de los comercios identificados.</string>

    <string name="menu_home">Mis cupones</string>
    <string name="menu_gallery">Mi historial de puntos</string>
    <string name="menu_slideshow">Digita tu factura</string>
    <string name="menu_tools">Metodos de pago</string>
    <string name="menu_share">Configuración</string>
    <string name="menu_send">Cerrar sesión</string>
    <string name="title_activity_login_correo">LoginCorreo</string>
    <string name="prompt_email">Correo Eléctronico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="conf_password">Confirmar contraseña</string>
    <string name="genero">Género</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="Login">Ingresar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="fecha">Fecha de nacimiento</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mis_cupones">"Mis cupones"</string>
    <string name="no_cupones">"No tenés Cupones en este momento"</string>
    <string name="no_historial">"No tenés transacciones en este momento"</string>
    <string name="historial">"Mi historial de puntos"</string>
    <string name="factura">"Digitá el código de tu factura"</string>
    <string name="codigo">"Código de tu factura"</string>
    <string name="enviar">"Enviar"</string>
    <string name="guardar">"Guardar"</string>
    <string name="registrarse">"Registrarse"</string>
    <string name="usuario">"Usuario"</string>
    <string name="agregar_tarjeta">"Agregar una nueva tarjeta"</string>
</resources>
