<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_miscupones"
            android:icon="@drawable/mis_cupones"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/historial"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_factura"
            android:icon="@drawable/factura"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_metodospago"
            android:icon="@drawable/metodos"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/config"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_cerrarsesion"
            android:icon="@drawable/logout"
            android:title="@string/menu_send" />
    </group>

</menu>
