<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login_opciones">

    <ImageView
        android:id="@+id/topTapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@color/naranjafondo"
        app:srcCompat="@drawable/tapp1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:gravity="center_horizontal"
        android:textColor="@color/naranjafondo"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginBottom="25dp"
        android:text="@string/yaTapp" />

    <Button
        android:id="@+id/correobtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@color/naranjafondo"
        android:text="@string/correo"
        android:layout_gravity="center"
        android:textColor="@color/blanco" />

    <Button
        android:id="@+id/facebookbtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/azulbtn"
        android:text="@string/facebook"
        android:layout_gravity="center"
        android:textColor="@color/blanco" />

</LinearLayout>