<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Configuracion">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"></android.support.v7.widget.Toolbar>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/configu"
                android:layout_marginLeft="20dp"
                android:textColor="@color/blanco"
                android:textSize="25sp" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/editarBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparente"
        android:textAlignment="textStart"
        android:drawableEnd="@drawable/arrow"
        android:text="@string/editar" />

    <Button
        android:id="@+id/paisBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparente"
        android:textAlignment="textStart"
        android:drawableEnd="@drawable/arrow"
        android:text="@string/pais" />

    <Button
        android:id="@+id/terminosBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:background="@color/transparente"
        android:drawableEnd="@drawable/arrow"
        android:text="@string/terminos" />
</LinearLayout>